kubernetes/pedidos-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: pedidos
  name: pedidos
