kubernetes/pedidos-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pedidos-v2
  namespace: pedidos
  labels:
    app: pedidos
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pedidos
      version: v2
  template:
    metadata:
      labels:
        app: pedidos
        version: v2
    spec:
      serviceAccountName: pedidos
      containers:
      - name: pedidos
        image: rodrigoaf/pedidos:0.1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: 
          requests:
            memory: 128Mi
            cpu: "125m"
          limits:
            memory: 256Mi
            cpu: "250m"
      dnsPolicy: ClusterFirst
      terminationGracePeriodSeconds: 30
