kubernetes/pedidos-service-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: pedidos-service-v1
  namespace: pedidos
  labels:
    app: pedidos-v1
    service: pedidos
spec:
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: pedidos-v1
