kubernetes/pedidos-service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: pedidos-service-v2
  namespace: pedidos
  labels:
    app: pedidos
    service: pedidos
spec:
  type: ClusterIP
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: pedidos
