kubernetes/pedidos-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pedidos-service
  namespace: pedidos
  labels:
    app: pedidos-v1
    service: pedidos
spec:
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    name: pedidos-v1
