kubernetes/pedidos-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: pedidos-ingress
  namespace: pedidos
spec:
  rules:
  - host: k8s-master
    http:
      paths:
      - backend:
          serviceName: pedidos-service-v2
          servicePort: 8080
        path: /v2/gerenciador
